feat: Pretty 3D dices !

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,12 @@
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
+
+    <script src="./libs/dice3d/three.min.js"></script>
+    <script src="../libs/dice3d/cannon.min.js"></script>
+    <script type="text/javascript" src="./libs/dice3d/teal.js"></script>
+    <script type="text/javascript" src="./libs/dice3d/dice.js"></script>
+
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
