fix: eslint errors from lib

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
 
     <script src="./libs/dice3d/three.min.js"></script>
     <script src="../libs/dice3d/cannon.min.js"></script>
-    <script type="text/javascript" src="./libs/dice3d/teal.js"></script>
+    <script type="text/javascript" src="./libs/dice3d/dice-core.js"></script>
     <script type="text/javascript" src="./libs/dice3d/dice.js"></script>
 
     <div id="app"></div>
