--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=800,initial-scale=1.0">
     <link rel="apple-touch-icon" sizes="180x180" href="/img/ico/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/img/ico/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/img/ico/favicon-16x16.png">
-    <link rel="manifest" href="/img/ico/site.webmanifest">
     <link rel="mask-icon" href="/img/ico/safari-pinned-tab.svg" color="#5bbad5">
     <link rel="shortcut icon" href="/img/ico/favicon.ico">
     <link rel="manifest" href="/manifest.json">
